rest-sample-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-sample-app
  namespace: default
  labels:
    app: rest-sample-app
spec:
  selector:
    app: rest-sample-app
  ports:
    - protocol: TCP
      port: 8080
      #nodePort: 30074
  type: NodePort
